# grok-shill-simulator

./: README.md  app.py  example.py  pyproject.toml
grok_shill/: __init__.py
grok_shill/core/: __init__.py  llm.py  prompt.py
grok_shill/integrations/: firecrawl_tool.py  rapidapi.py
grok_shill/ui/: streamlit_app.py
